crates/rome_js_formatter/tests/specs/prettier/typescript/error-recovery/generic.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "typescript\\error-recovery\\generic.ts"
---

# Input

```js
f1<>();

new f2<>();

function f3<>() {}

class f4 {
    constructor<>() {}
}

const f5 = function<>() {}

interface f6<> {
    test<>();
}

class f7<> {
    test<>() {}
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -8,12 +8,12 @@
   constructor<>() {}
 }
 
-const f5 = function <>() {};
+const f5 = function<>() {}
 
 interface f6<> {
-  test<>();
+    test<>();
 }
 
 class f7<> {
-  test<>() {}
+    test<>() {}
 }
```

# Output

```js
f1<>();

new f2<>();

function f3<>() {}

class f4 {
  constructor<>() {}
}

const f5 = function<>() {}

interface f6<> {
    test<>();
}

class f7<> {
    test<>() {}
}
```


# Errors
```
generic.ts:1:4 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ generic.ts:1:4
    │
  1 │ f1<>();
    │    ^
  
generic.ts:3:8 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ generic.ts:3:8
    │
  3 │ new f2<>();
    │        ^
  
generic.ts:5:13 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ generic.ts:5:13
    │
  5 │ function f3<>() {}
    │             ^
  
generic.ts:8:17 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
    ┌─ generic.ts:8:17
    │
  8 │     constructor<>() {}
    │                 ^
  
generic.ts:8:16 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × constructors cannot have type parameters.
  
    ┌─ generic.ts:8:16
    │
  8 │     constructor<>() {}
    │                ^^
  
generic.ts:11:21 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ generic.ts:11:21
     │
  11 │ const f5 = function<>() {}
     │                     ^
  
generic.ts:13:14 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ generic.ts:13:14
     │
  13 │ interface f6<> {
     │              ^
  
generic.ts:14:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ generic.ts:14:10
     │
  14 │     test<>();
     │          ^
  
generic.ts:17:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ generic.ts:17:10
     │
  17 │ class f7<> {
     │          ^
  
generic.ts:18:10 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a type parameter but instead found '>'
  
  × Expected a type parameter here
  
     ┌─ generic.ts:18:10
     │
  18 │     test<>() {}
     │          ^
  

```


